--- a/src/index.css
+++ b/src/index.css
@@ -172,14 +172,14 @@ ul {
   flex-direction:row ;
   position: relative;
 } */
-.iconsSoial i {
+.hero .iconsSoial i {
   color: #fff;
   font-size: 16px;
   margin: 0 10px;
   cursor: pointer;
   transition: color 0.5s ease-in-out 0s;
 }
-.iconsSoial i:hover {
+.hero .iconsSoial i:hover {
   color: var(--main-color-alt);
   transform: translateY(-5px);
 }
@@ -286,7 +286,7 @@ ul {
   z-index: 0;
   margin: 30px 0;
 }
-.heroAreaText .btn::after {
+.heroAreaText .btn::after  {
   background-color: var(--main-color-alt);
   color: white !important;
   bottom: 0;
@@ -303,7 +303,7 @@ ul {
   width: 150%;
   z-index: -1;
 }
-.heroAreaText .btn:hover::after {
+.heroAreaText .btn:hover::after  {
   -webkit-transform: skewX(45deg) scale(1);
   transform: skewX(45deg) scale(1);
 }
@@ -334,12 +334,12 @@ ul {
     display: none;
   }
 }
-.iconsSoial ul {
+.hero .iconsSoial ul {
   display: flex;
   flex-direction: row;
   position: relative;
 }
-.iconsSoial ul li {
+.hero .iconsSoial ul li {
   margin: 0;
   padding: 0;
 }
@@ -413,7 +413,6 @@ ul {
   margin: 1rem;
   gap: 5px;
   margin-bottom: 2rem;
-
 }
 .swiper-slide .cotent i {
   color: var(--main-color-alt);
@@ -439,7 +438,6 @@ ul {
   justify-content: space-between;
   align-items: end;
   padding: 10px;
-  
 }
 .swiper-slide .info a,
 .swiper-slide .info i {
@@ -607,14 +605,14 @@ ul {
   justify-content: center;
   margin: 0 auto;
 }
-.featur-content .box{
+.featur-content .box {
   background-color: #0d0d0f;
   border-radius: 10px;
-  box-shadow: inset 0 0 10px rgba(6,6,6,.15);
+  box-shadow: inset 0 0 10px rgba(6, 6, 6, 0.15);
   padding: 50px 30px;
   -webkit-transform: skewY(-5deg);
   transform: skewY(-5deg);
-  transition: all .5s ease-out 0s;
+  transition: all 0.5s ease-out 0s;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -632,11 +630,11 @@ ul {
   padding: 20px 0;
 }
 
-.featur-content .box h5{
+.featur-content .box h5 {
   font-size: 30px;
   font-weight: 500;
 }
-.featur-content .box:hover{
+.featur-content .box:hover {
   transform: skewY(0deg);
   background-color: var(--main-color-alt);
   color: var(--main-color);
@@ -644,4 +642,159 @@ ul {
 
 .featur-content .box:hover i {
   color: var(--main-color);
+}
+/* end feture */
+.contact {
+  margin-top: var(--main-padding-top);
+  margin-bottom: var(--main-padding-bottom);
+  position: relative;
+}
+.contact .contact-content {
+  display: flex;
+  margin: 0 3rem;
+  width: calc(100%-3rem);
+  justify-content: space-around;
+  gap: 5rem;
+  flex-wrap: wrap;
+}
+.contact .contact-content .soial {
+  display: flex;
+  flex-direction: column;
+  flex: 0;
+}
+.contact .iconsSoial {
+  display: flex;
+  gap: 0.5rem;
+}
+.contact .iconsSoial a {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  border: 1px solid var(--main-color);
+  background-color: var(--main-color);
+  color: white;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  transition: var(--main-transition);
+}
+.contact .iconsSoial a:hover {
+  background-color: white;
+  border: 1px solid var(--main-color);
+  color: var(--main-color);
+}
+.contact .single-info {
+  align-items: center;
+  display: flex;
+  margin: 30px 0;
+  width: 100%;
+  transition: var(--main-transition);
+  padding: 1rem;
+}
+.contact .single-info .icon {
+  min-width: 100px;
+}
+.contact .single-info .icon i {
+  background-color: rgba(23, 22, 26, 0.1);
+  border-radius: 50%;
+  font-size: 30px;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  transition: all 0.5s ease-out 0s;
+  width: 80px;
+}
+.contact .single-info .info h3 {
+  color: #17161a;
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+}
+.contact .single-info .info p {
+  color: #272727;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.8;
+  margin: 0;
+}
+.single-info:hover .icon i {
+  color: var(--main-color-alt);
+}
+.single-info:hover {
+  box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+  cursor: pointer;
+}
+.map-container {
+  margin: 2rem 0;
+}
+.formContact {
+  margin-top: 30px;
+}
+.formContact .contetn {
+  display: flex;
+  margin: 0 3rem;
+  width: calc(100%-3rem);
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.formContact form {
+  display: flex;
+  flex-direction: column;
+  width: 35rem;
+}
+.formContact .input input {
+  background-color: #fff;
+  border: 1px solid #e9e9e9;
+  box-sizing: border-box;
+  height: 60px;
+  margin-bottom: 30px;
+  padding: 0 15px;
+  width: 100%;
+  transition: var(--main-transition);
+}
+.formContact .img img {
+  max-width: 25rem;
+}
+.formContact .input input:focus {
+  outline: none;
+  border: 1px solid var(--main-color) !important;
+}
+.input input:focus::placeholder {
+  color: var(--main-color) ;
+}
+form h3 {
+  color: #17161a;
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+ form .submit {
+  background-color: #17161a;
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0;
+  max-width: 180px;
+  text-align: center;
+  padding: 20px;
+  cursor: pointer;
+  transition: var(--main-transition);
+  border: 1px solid var(--main-color);
+}
+form .submit:hover {
+  background-color: white;
+  border: 1px solid var(--main-color);
+  color: var(--main-color);
+}
+@media (max-width:992px) {
+  .formContact img {
+    display: none;
+  }
 }
